# fabbula

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml  typos.toml
.github/workflows/: ci.yml  lint.yml
docs/: PIPELINE.md  index.html  optimizations.md
docs/previews/: alpine_gf180_multi_inv.html  bear_sky130.html  beluga_gf180.html  beluga_ihp.html  beluga_sky130.html  crane_mon_gf180.html  dragon_sky130.html  fabbula_sky130.html  fabbula_sky130_multi_inv.html  mandala_gf180_multi_inv.html  mandala_sky130.html  owl_freepdk45.html  pixel_ship_freepdk45_small.html  pixel_ship_sky130.html  portrait_ihp.html  shield_logo_gf180_small.html  super_beluga_sky130.html  vacuum_tube_sky130.html  zurich_fabbula2.html
pdks/: .gitignore  asap7.toml  fabbula2.toml  freepdk45.toml  gf180mcu.toml  ihp_sg13g2.toml  sky130.toml
profiling/: bench_artwork.rs  bench_die_scale.rs  bench_drc.rs  bench_polygon.rs  gen_test_image.rs  profile_hotpaths.rs
scripts/: generate_gallery.sh
src/: artwork.rs  color.rs  drc.rs  gdsio.rs  generation.rs  lef.rs  lib.rs  main.rs  pdk.rs  polygon.rs  preview.rs  tiles.rs
tests/: cli_regression.rs  drc_per_pdk.rs  end_to_end.rs
tests/snapshots/: cli_regression__color_mode_channel.snap  cli_regression__color_mode_palette.snap  cli_regression__list_pdks.snap  cli_regression__merge_with_offset.snap  cli_regression__separated_mode.snap  cli_regression__snapshot_generate_gds_asap7.snap  cli_regression__snapshot_generate_gds_fabbula2.snap  cli_regression__snapshot_generate_gds_freepdk45.snap  cli_regression__snapshot_generate_gds_gf180mcu.snap  cli_regression__snapshot_generate_gds_ihp_sg13g2.snap  cli_regression__snapshot_generate_gds_sky130.snap  cli_regression__snapshot_generate_lef_asap7.snap  cli_regression__snapshot_generate_lef_fabbula2.snap  cli_regression__snapshot_generate_lef_freepdk45.snap  cli_regression__snapshot_generate_lef_gf180mcu.snap  cli_regression__snapshot_generate_lef_ihp_sg13g2.snap  cli_regression__snapshot_generate_lef_sky130.snap  cli_regression__snapshot_generate_svg_asap7.snap  cli_regression__snapshot_generate_svg_fabbula2.snap  cli_regression__snapshot_generate_svg_freepdk45.snap  cli_regression__snapshot_generate_svg_gf180mcu.snap  cli_regression__snapshot_generate_svg_ihp_sg13g2.snap  cli_regression__snapshot_generate_svg_sky130.snap  cli_regression__snapshot_show_pdk_asap7.snap  cli_regression__snapshot_show_pdk_fabbula2.snap  cli_regression__snapshot_show_pdk_freepdk45.snap  cli_regression__snapshot_show_pdk_gf180mcu.snap  cli_regression__snapshot_show_pdk_ihp_sg13g2.snap  cli_regression__snapshot_show_pdk_sky130.snap  cli_regression__strategies_polygon_counts.snap
todo/: code.md  todos.md
util/: lint-commits.rs
