[package]
name = "fabbula"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Multi-PDK, DRC-aware image-to-GDSII artwork generator"
license = "Apache-2.0"
authors = ["Daniel Keller"]
keywords = ["gdsii", "asic", "chip-art", "pdk", "eda"]
categories = ["science", "command-line-utilities"]
repository = "https://github.com/DanielKellerM/fabbula"
homepage = "https://github.com/DanielKellerM/fabbula"
readme = "README.md"
exclude = ["profiling/", "outputs/", "media/", "docs/", "todo/"]

[dependencies]
# GDSII I/O — gds21 is mature, serde-friendly, and part of Layout21
gds21 = "0.2"

# Image processing
image = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Config / PDK definitions
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism for large images
rayon = "1"

# R-tree spatial index for scalable DRC
rstar = "0.12"

# Gzip decompression for compressed GDS files
flate2 = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1

[[bin]]
name = "lint-commits"
path = "util/lint-commits.rs"

[[bin]]
name = "gen_test_image"
path = "profiling/gen_test_image.rs"

[[bin]]
name = "profile_hotpaths"
path = "profiling/profile_hotpaths.rs"

[[bench]]
name = "bench_drc"
harness = false
path = "profiling/bench_drc.rs"

[[bench]]
name = "bench_polygon"
harness = false
path = "profiling/bench_polygon.rs"

[[bench]]
name = "bench_artwork"
harness = false
path = "profiling/bench_artwork.rs"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
